change method to retain sorting